--- a/ansible-db-refresh.yml
+++ b/ansible-db-refresh.yml
@@ -32,7 +32,7 @@ stages:
         ansibleInterface: 'agentMachine'
         playbookPathOnAgentMachine: '$(System.DefaultWorkingDirectory)/$(playbook_vma_ops)'
         inventoriesAgentMachine: 'file'
-        inventoryFileOnAgentMachine: 'ansible_db_env_management_scripts/inventory'
+        inventoryFileOnAgentMachine: '$(System.DefaultWorkingDirectory)/$(inventory_ansible)'
         failOnStdErr: false
         args: -vvv --extra-vars='
           script_export_db="$(System.DefaultWorkingDirectory)/$(script_export_db)"
